src/test/deca/context/valid/Obj/decl-methode-null.deca
// Description:
//    Déclaration d'une méthode qui renvoie null
//
// Résultat:
//    Succès
//
class A {
    int methode(){
        return null;
    }
{}